# uhr

./: CMakeLists.txt  uhr.c  uhr.geany  uhr.h
buttons/: CMakeLists.txt  buttons.c  buttons.h
ili_9341/: CMakeLists.txt  font10x16.h  font12x16.h  font14x20.h  font7x11.h  ili_9341.c  ili_9341.h  ziffer10x7.h  ziffer15x11.h
